Started demo. Need plupload

--- a/examples/library.html
+++ b/examples/library.html
@@ -3,6 +3,16 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Upload library example</title>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="../js/upload.js"></script>
+    <script type="text/javascript" charset="utf-8">
+    $(document).ready(function() {
+      var uploader = new VideoUploader({
+        fileUploadButtonId: 'upload-link'
+      });
+    });
+
+    </script>
   </head>
 
   <body>
