--- a/examples/library.html
+++ b/examples/library.html
@@ -8,7 +8,8 @@
     <script type="text/javascript" charset="utf-8">
     $(document).ready(function() {
       var uploader = new VideoUploader({
-        fileUploadButtonId: 'upload-link'
+        fileUploadButtonId: 'upload-link',
+        apiEndPoint: '/server_components/php/index.php'
       });
     });
 
