Add some of the dom required to get the uploader to not error Also set a fake endpoint url because we do not have the endpoint at the time of rendering.

--- a/examples/library.html
+++ b/examples/library.html
@@ -18,7 +18,12 @@
 
   <body>
     <a id="upload-link">Upload</a>
-    <p id="status-text"></p>
+    <div id="upload-main-panel">
+      <div id="upload-button-container">
+        <p id="status-text"></p>
+      </div>
+    </div>
+
   </body>
 
 </html>
