--- a/examples/gui.html
+++ b/examples/gui.html
@@ -35,6 +35,25 @@
     });
 
     </script>
+
+    <style type="text/css" media="all">
+    .video-upload-row {
+      background: #ddd;
+    }
+    .actions {
+      float: right;
+    }
+
+    .progress {
+      height: 20px;
+      border: 1px solid black;
+      clear: both;
+    }
+    .progress-bar {
+      background-color: blue;
+      height: 100%;
+    }
+    </style>
   </head>
 
   <body>
@@ -45,27 +64,21 @@
     </div>
 
     <div id="uploaded-videos-listing-container">
-      <div class="svi svi-progress upload-video-template" style="display: none;">
-        <div class="svi-icon">
-        </div>
-
-        <div class="ljust">
-          <h4 class="encode-title"><span>Uploading:</span></h4>
+      <div class="video-upload-row upload-video-template" style="display: none;">
+        <div>
+          <p class="encode-title"><span>Uploading:</span></p>
           <span class="status">Queued for upload</span>
         </div>
 
-        <div class="rjust">
-          <a href="#" class="red retry-encode" style="display:none;">Retry</a>
-          <a href="#" class="red cancel-upload" style="display:none;">Cancel</a>
+        <div class="actions">
+          <a href="#" class="cancel-upload" style="display:none;">Cancel</a>
         </div>
 
-        <ul>
-          <li>
-            <div class="progress-bar animated">
-              <div class="progress-bar-inner" style="width:0%"></div>
-            </div>
-          </li>
-        </ul>
+        <div class="progress">
+          <div class="progress-bar">
+            <div class="progress-bar-inner" style="width: 0px"></div>
+          </div>
+        </div>
       </div>
     </div>
 
