--- a/examples/gui.html
+++ b/examples/gui.html
@@ -39,18 +39,29 @@
     <style type="text/css" media="all">
     .video-upload-row {
       background: #ddd;
+      padding: 10px;
+    }
+    .status {
+      margin-bottom: 5px;
+      display: block;
     }
     .actions {
       float: right;
+      margin-top: 0px;
     }
-
+    .info {
+      float:left
+    }
+    p {
+      margin-top: 0px;
+    }
     .progress {
       height: 20px;
       border: 1px solid black;
       clear: both;
     }
     .progress-bar {
-      background-color: blue;
+      background-color: #428bca;
       height: 100%;
       width: 0;
     }
@@ -66,7 +77,7 @@
 
     <div id="uploaded-videos-listing-container">
       <div class="video-upload-row upload-video-template" style="display: none;">
-        <div>
+        <div class="info">
           <p class="encode-title"><span>Uploading:</span></p>
           <span class="status">Queued for upload</span>
         </div>
