--- a/examples/library.html
+++ b/examples/library.html
@@ -21,7 +21,7 @@
         displayStatus('User has selected ' + file.name);
       });
 
-      uploader.on('successfullFileUpload', function(file, video){
+      uploader.on('successfulFileUpload', function(file, video){
         displayStatus('the file has been uploaded successfully. ID: ' + video.id);
       });
 
