Gui drag and drop support

--- a/examples/gui.html
+++ b/examples/gui.html
@@ -23,9 +23,9 @@
   </head>
 
   <body>
-    <div id="upload-main-panel">
+    <div id="drag-drop-panel">
       <div id="upload-button-container">
-        <a id="upload-link">Upload</a>
+        Drag files here to upload or <a id="upload-link">click here</a>
       </div>
     </div>
 
