More specific Viddler naming to prevent clashing with other sites code

--- a/examples/gui.html
+++ b/examples/gui.html
@@ -9,12 +9,12 @@
     <script type="text/javascript" charset="utf-8">
 
     $(document).ready(function() {
-      var uploader = new VideoUploader({
+      var uploader = new ViddlerVideoUploader({
         fileUploadButtonId: 'upload-link',
         apiEndPoint: '/server_components/php/index.php'
       });
 
-      var gui = new VideoUploaderGui({
+      var gui = new ViddlerVideoUploaderGui({
         uploader: uploader
       });
     });
