--- a/examples/library.html
+++ b/examples/library.html
@@ -12,7 +12,7 @@
         $('#status-log').append(status);
       }
 
-      var uploader = new VideoUploader({
+      var uploader = new ViddlerVideoUploader({
         fileUploadButtonId: 'upload-link',
         apiEndPoint: '/server_components/php/index.php',
       });
