--- a/examples/manual.html
+++ b/examples/manual.html
@@ -13,6 +13,8 @@
       var uploader = new ViddlerVideoUploader({
         fileUploadButtonId: 'upload-link',
         apiEndPoint: '/server_components/php/index.php',
+        flashSwfUrl: '/src/lib/plupload/js/Moxie.swf',
+        runtimes: 'html5,flash',
         autostart: false,
         multi_selection: false,
         postParams: {video_id: '68ecdfbd'}
