Add option to warn when navigating away when uploads are active
Option is called ViddlerVideoUploaderGui on ViddlerVideoUploaderGui

--- a/examples/gui.html
+++ b/examples/gui.html
@@ -15,7 +15,8 @@
       });
 
       var gui = new ViddlerVideoUploaderGui({
-        uploader: uploader
+        uploader: uploader,
+        warnOnNavigateAwayWhenActiveUploads: true
       });
     });
 
